--- a/index.html
+++ b/index.html
@@ -43,11 +43,12 @@
                 3
              </div>
        </section>
-       <section>
+       <section id="holiday-picker">
            <!-- Pick holiday menu -->
+           
            <label for="Where to go">Where to go:</label>
-
         <select name="Destination" id="Places">
+            
             <option value="italy">Italy</option>
             <option value="south africa">South Africa</option>
             <option value="maldives">Maldives</option>
